src/test/deca/context/valid/without_class/if_elseif_else2.deca
// Description:
//    Teste un autre type de condition booléenne (assign) dans une boucle if/else
//
// Result:
//    
//
// Historique:
//    cree le 10/01/2023
{
    boolean x = false;
    boolean y = true;
    if (x = y) {
        print("Ne devrait jamais passer par ici");
    }
}